🔄 register.js | Lectura de elementos, checkbox dinámico y creación de banderas y regex de validación

--- a/html/register.html
+++ b/html/register.html
@@ -4,8 +4,8 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>panelUsuario</title>
-    <link rel='stylesheet' href='style.css'>
-    <script src='register.js' defer></script>
+    <link rel='stylesheet' href='../css/style.css'>
+    <script type="module" src='../js/register.js' defer></script>
 </head>
 
 <body>
@@ -37,7 +37,7 @@
                 <label for="userLegalAge">Soy mayor de edad</label>
                 <small></small>
             </div>
-            <div class="inputContainer hidden">
+            <div id="ageDiv" class="inputContainer hidden">
                 <label>Edad:</label>
                 <input id="userAge" type="number" placeholder="Ej. 29">
                 <small></small>
