--- a/html/register.html
+++ b/html/register.html
@@ -5,12 +5,12 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>panelUsuario</title>
     <link rel='stylesheet' href='../css/style.css'>
-    <script type="module" src='../js/register.js' defer></script>
+    <script type="module" src='../modules/register.js' defer></script>
 </head>
 
 <body>
     <main>
-        <form name="Login form" id="loginForm" action="/send/" method="post">
+        <form name="Login form" id="loginForm" action="#" method="post">
             <h1>Registro</h1>
             <div class="inputContainer">
                 <label>Nombre de usuario:</label>
