✅ login.js y cookies.js | Login terminado a falta de cambios de escenas. Nuevo utils cookies, para settear cookies.

--- a/html/register.html
+++ b/html/register.html
@@ -10,7 +10,7 @@
 
 <body>
     <main>
-        <form name="Register form" id="registerForm" action="#" method="post">
+        <form name="Register form" id="registerForm" class="form" action="#" method="post">
             <h1>Registro</h1>
             <div class="inputContainer">
                 <label>Nombre de usuario:</label>
@@ -46,7 +46,7 @@
                 <small></small>
             </div>
             <button id="submitButton" type="submit" class="notAvailable" disabled>Crear cuenta</button>
-            <a href="../index.html">¿Ya tienes cuenta? Inicia sesión</a>
+            <a href="login.html">¿Ya tienes cuenta? Inicia sesión</a>
         </form>
         
     </main>
