--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@
         </div>
     </main>
     <footer>
-        <div id="bannerCookies">
-            <p>Usamos cookies para recordar tus preferencias. ¿Aceptas?</p>
-            <button id="allowCookies">Aceptar</button>
+        <div id="bannerCookies" class="hidden">
+            <div>
+                <p>Usamos cookies para recordar tus preferencias. ¿Aceptas?</p>
+                <button id="allowCookies">Aceptar</button>
+            </div>
         </div>
     </footer>
 </body>
