--- a/index.html
+++ b/index.html
@@ -78,8 +78,10 @@
     </main>
     <footer>
         <div id="bannerCookies">
-            <p>Usamos cookies para recordar tus preferencias. ¿Aceptas?</p>
-            <button id="allowCookies">Aceptar</button>
+            <div>
+                <p>Usamos cookies para recordar tus preferencias. ¿Aceptas?</p>
+                <button id="allowCookies">Aceptar</button>
+            </div>
         </div>
     </footer>
 </body>
