🔥 FIXED register.js | Ahora si se chequea la casilla mayor de edad, el botón se torna disabled hasta que se añada una edad válida

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <label>Código postal:</label>
                 <input id="userPostalCode" type="number" placeholder="Ej. 06800">
                 <small></small>
-            </div id="divLegalAge">
-            <div>
+            </div>
+            <div id="divLegalAge">
                 <input id="userLegalAge" type="checkbox">
                 <label for="userLegalAge">Soy mayor de edad</label>
                 <small></small>
