--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <label>Contraseña:</label>
                 <div class="password-wrapper">
                     <input id="userPassword" type="password" placeholder="Ej. Abcd1234">
-                    <img src="../images/visible.png" id="registerShowPassword" class="eye-icon">
+                    <img src="./images/visible.png" id="registerShowPassword" class="eye-icon">
                 </div>
                 <small></small>
             </div>
@@ -59,7 +59,7 @@
                 <label>Contraseña:</label>
                 <div class="password-wrapper">
                     <input id="loginPassword" type="password" placeholder="Ej. Abcd1234">
-                    <img src="../images/visible.png" id="loginShowPassword" class="eye-icon">
+                    <img src="./images/visible.png" id="loginShowPassword" class="eye-icon">
                 </div>
             </div>
             <small id="loginFeedback"></small>
