--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>panelUsuario</title>
     <link rel='stylesheet' href='css/style.css'>
-    <script type="module" src='modules/script.js' defer></script>
+    <script type="module" src='script.js' defer></script>
 </head>
 
 <body>
